fix: word wrap

--- a/src/components/reusable/codeView/blockCodeView/blockCodeView.scss
+++ b/src/components/reusable/codeView/blockCodeView/blockCodeView.scss
@@ -196,7 +196,7 @@ $border-radius: 4px;
                 line-height: 1.6;
                 max-width: 75%;
                 box-sizing: border-box;
-                white-space: pre;
+                white-space: break-spaces;
                 word-wrap: break-word;
                 word-break: normal;
             }
